# barcode-sr-trial

./: .gitignore  Makefile  export_onnx.py  generate_barcode_sr_dataset.py  pyproject.toml  start_fine_tuning.py  test_onnx.py  training.ipynb
SPAN/: main.py  pyproject.toml  setup.py
SPAN/basicsr/archs/: vgg_arch.py
SPAN/basicsr/utils/: options.py
