[project]
name = "span"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "cython>=3.2.3",
    "future>=1.0.0",
    "lmdb>=1.7.5",
    "numpy>=1.17",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
    "tb-nightly>=2.21.0a20251023",
    "torch>=1.7",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "yapf>=0.43.0",
]
